--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "framer-motion": "^10.12.16",
     "next": "13.4.4",
     "next-fonts": "^1.5.1",
+    "next-seo": "^6.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
+    "react-icons": "^4.9.0",
     "react-spinners": "^0.13.8",
     "tailwindcss": "3.3.2"
   }
